# fast_store

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 0214fcbbb32f_refactor_model_user.py  06190f075a5d_refactor_model_coupon.py  158656002e2a_database_created.py  4bde2622a1eb_refactor_model_address.py  bf488b3519d6_refactor_model_category.py  c33ffffe0109_refactor_model_address.py  c81cd8321bc1_refactor_model_order.py  cdaaf2577d84_refactor_model_product.py
fast_store/backend/core/models/: __init__.py  cart.py  db_helper.py  order.py  order_product.py  profile.py  user.py
fast_store/core/models/: cart_item.py  category.py  coupon.py  db_helper.py  product.py
migrations/: env.py
migrations/versions/: abf27a3c2bec_database_created.py
src/backend/: main.py
src/backend/app/addresses/: crud.py  schemas.py  views.py
src/backend/app/auth/: schemas.py  utils.py  views.py
src/backend/app/cart_items/: crud.py  schemas.py  views.py
src/backend/app/carts/: crud.py  schemas.py  views.py
src/backend/app/categories/: crud.py  schemas.py  views.py
src/backend/app/core/: config.py
src/backend/app/core/models/: address.py  category.py  coupon.py  (+5 more)
src/backend/app/coupons/: crud.py  schemas.py  views.py
src/backend/app/order_products/: crud.py  schemas.py  views.py
src/backend/app/orders/: crud.py  schemas.py  views.py
src/backend/app/products/: crud.py  schemas.py  views.py
src/backend/app/profiles/: crud.py  schemas.py  views.py
src/backend/app/reviews/: crud.py  schemas.py  views.py
src/backend/app/users/: crud.py  schemas.py  views.py
