[tool.poetry]
name = "fast-store"
version = "0.1.0"
description = ""
authors = ["VladlmlrF <vladimirfalin84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}
alembic = "^1.13.1"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.25"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
