[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["VladlmlrF <vladimirfalin84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.25"}
psycopg2-binary = "^2.9.9"
pre-commit = "^3.6.0"
sqlmodel = "^0.0.14"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
